Enhance Maven deploy command with debug flags (#1261)
Added verbose error output to Maven deploy command.

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>