@@ -54,6 +54,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
+        <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
+        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
+        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
+        <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
+             
         <maven-antrun-plugin.version>3.2.0</maven-antrun-plugin.version>
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
@@ -317,4 +329,168 @@
         </plugins>
     </build>
 
+             <profiles>
+        <!-- 发布到 Maven中央仓库 -->
+        <profile>
+            <id>sonatype-oss-release</id>
+            <!-- 设为默认profile 开始 -->
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${maven-compiler-plugin.version}</version>
+                        <configuration>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
+                            <encoding>UTF-8</encoding>
+                            <fork>true</fork>
+                            <compilerArgs combine.children="append">
+                                 <arg>-parameters</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                                 <arg>--add-exports</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                                 <arg>--add-opens</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                                 <arg>--add-opens</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                                 <arg>--add-opens</arg>
+                                 <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                             </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>flatten-maven-plugin</artifactId>
+                        <version>${flatten-maven-plugin.version}</version>
+                        <configuration>
+                            <!--  是否更新pom文件，此处还有更高级的用法-->
+                            <updatePomFile>true</updatePomFile>
+                            <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>flatten</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>flatten</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>flatten.clean</id>
+                                <phase>clean</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 生成Source jar文件 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>${maven-source-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- 生成Javadoc，关闭doclint,避免注解检查不通过 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${maven-javadoc-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
+                                    <!-- <aggregate>true</aggregate> -->
+                                    <charset>${project.build.sourceEncoding}</charset>
+                                    <!-- utf-8读取文件 -->
+                                    <encoding>${project.build.sourceEncoding}</encoding>
+                                    <!-- utf-8进行编码代码 -->
+                                    <docencoding>${project.build.sourceEncoding}</docencoding>
+                                    <!-- utf-8进行编码文档 -->
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Maven GPG插件用于使用以下配置对组件进行签名 -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>${maven-gpg-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <executable>gpg</executable>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <version>${maven-deploy-plugin.version}</version>
+                    </plugin>
+                    <!-- 正式版/SNAPSHOT发布使用central-publishing-maven-plugin插件-->
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>${central-publishing-maven-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <publishingServerId>sonatype-nexus-snapshots</publishingServerId>
+                            <autoPublish>true</autoPublish>
+                            <centralBaseUrl>https://central.sonatype.com</centralBaseUrl>
+                            <deploymentName>Meta-Open-${revision}-Deployment</deploymentName>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                    </plugin>
+                </plugins>
+            </build>
+            <!-- repository、snapshotRepository中的id一定要与Maven的setting.xml文件中的server节点下的id 保持一一对应！ -->
+            <distributionManagement>
+                <repository>
+                    <id>sonatype-nexus-staging</id>
+                    <name>Nexus Release Repository</name>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>sonatype-nexus-snapshots</id>
+                    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+         
 </project>
